# summermathprograms.org

./: .gitignore  README.md  about.md  index.html  package.json  shell.nix  site.cabal  site.hs  stack.yaml  tailwind.config.js
.github/workflows/: deploy.yml
pages/: about.md  contact-us.md  contact.md  faq.md  index.html  index.md  programs.md  search.md  why.md
pages/for/: parents.md  staff.md  students.md  teachers.md
posts/: sample-post.md
programs/AIM-High/: index.md
programs/EtaleQuest/: index.md
programs/FinMathBridge/: index.md
programs/MathForge/: index.md
programs/Moss/: Indiana.md  Ohio.md  index.md
programs/PREMYSE/: EastDakota.md  Europe.md  index.md
programs/PROMYS/: index.md
programs/SUMACULUS/: index.md
src/css/: tailwind.css
src/js/: age.js  grade.js  index.js
template/: landing.html
templates/: default.html  footer.html  header.html  landing.html  post.html  program.html  program_partial.html
