cabal-version:       2.4
name:                site
version:             0.1.0.0
build-type:          Simple
synopsis:            A Hakyll static site generator
description:         A simple static site generator using Hakyll.
license:             BSD3
license-file:        LICENSE
category:            Web
author:              Your Name
maintainer:          your.email@example.com
build-depends:       base >=4.7 && <5, hakyll >=4.12, directory, filepath

executable site
  main-is:             site.hs
  hs-source-dirs:      .
  build-depends:       base, hakyll, directory, filepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
