cabal-version:       2.4
name:                site
version:             0.1.0.0
build-type:          Simple
synopsis:            A Hakyll static site generator
description:         A simple static site generator using Hakyll.
license:             AGPL-3.0-only
license-file:        LICENSE
category:            Web
author:              Your Name
maintainer:          your.email@example.com

executable site
  main-is:             site.hs
  hs-source-dirs:      .
  build-depends:       base, hakyll, directory, filepath, aeson, bytestring, containers, time, pandoc-types, mtl, process, temporary
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
